# SM-Generator

./: main.py  pyproject.toml  requirements.sh
