[tool.poetry]
name = "repl-nix-sm-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sm_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
